--- a/Ubah_Web/components/subscribe.html
+++ b/Ubah_Web/components/subscribe.html
@@ -13,25 +13,23 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Lifestyle Vibes</a>
-        <!-- Toggler for mobile view -->
+        <a class="navbar-brand" href="../index.html">Lifestyle Vibes</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <!-- Collapsible menu -->
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="home.html">Home</a>
+                    <a class="nav-link" href="../components/home.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="../components/about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="../components/contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="subscribe.html">Subscribe</a>
+                    <a class="nav-link" href="../components/subscribe.html">Subscribe</a>
                 </li>
             </ul>
         </div>
