--- a/Ubah_Web/style/about.css
+++ b/Ubah_Web/style/about.css
@@ -12,7 +12,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    z-index: 1000; /* Always on top */
+    z-index: 1000; 
 }
 
 .navbar .nav-link {
